--- a/Weather/app/src/main/AndroidManifest.xml
+++ b/Weather/app/src/main/AndroidManifest.xml
@@ -30,7 +30,9 @@
 
         </activity>
 
-        <activity android:name=".MainActivity"/>
+        <activity android:name=".module.MainActivity"/>
+
+        <activity android:name=".module.ManageCityActivity"/>
 
     </application>
 
